modules/02-traffic-management/shift-traffic-v2-path/catalogdetail-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogdetail
  namespace: workshop
spec:
  hosts:
  - catalogdetail
  http:
  - name: "catalogDetail V2"
    match:
    - uri:
        exact: /v2/catalogDetail
    rewrite:
      uri: /catalogDetail
    route:
    - destination:
        host: catalogdetail
        port:
          number: 3000
        subset: v2
  - name: "catalogDetail V1"
    match:
    - uri:
        exact: /v1/catalogDetail
    rewrite:
      uri: /catalogDetail
    route:
    - destination:
        host: catalogdetail
        port:
          number: 3000
        subset: v1
